####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libsidtune.a

libsidtune_a_SOURCES = SidTuneTools.cpp SidTune.cpp PSID.cpp PP20.cpp MUS.cpp InfoFile.cpp IconInfo.cpp 


EXTRA_DIST = Buffer.h IconInfo.cpp InfoFile.cpp MUS.cpp PP20.cpp PP20.h PP20_Defs.h PSID.cpp SidTune.cpp SidTune.h SidTuneCfg.h SidTuneEndian.h SidTuneTools.cpp SidTuneTools.h SidTuneTypes.h SmartPtr.h 

####### kdevelop will overwrite this part!!! (end)############
